Install npm modules - prettier and its eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "extends": [
         "airbnb",
         "airbnb-typescript",
+        "prettier",
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended",
